--- a/style.css
+++ b/style.css
@@ -1,39 +1,40 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color:#F1FAEE ;
 }
 
 #container{
     margin: auto;
     width: 440px;
     height: 560px;
-    border: 5px solid #777777;
+    border: 5px solid #1D3557;
     border-radius: 3px;
-    background-color: #e2e0e0;
+    background-color: #969b94;
 }
 
 .output-field-top, .output-field-bottom{
     display: inline-block;
     vertical-align: top;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
+    border-left: 2px solid #1D3557;
+    border-right: 2px solid #1D3557;
     box-sizing: border-box;
     padding: auto;
     text-decoration: none;
     text-align: right;
-    font-size: 20px;
+    font-size: 24px;
     width: 420px;
     height: 50px;
     background-color: white;
 }
 
 .output-field-top{
-    border-top: 2px solid black;
+    border-top: 2px solid #1D3557;
     margin-top: 5px;
 }
 
 .output-field-bottom{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #1D3557;
     margin-bottom: 5px;
 }
 
@@ -41,7 +42,7 @@ button{
     display: inline-block;
     vertical-align: top;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid #1D3557;
     box-sizing: border-box;
     padding: auto;
     margin: 5px 0px 5px 0px;
@@ -52,11 +53,11 @@ button{
 }
 
 .number-btns{
-    background-color: #b4b3b3;
+    background-color: #A8DADC;
 }
 
 .operation-btns{
-    background-color: #fdc777;
+    background-color: #457B9D;
 }
 
-.clear-btns{background-color: #f52525;}
+.clear-btns{background-color: #E63946;}
